Insert commit summary here

--- a/DietTrackerBlazorServer/App.razor
+++ b/DietTrackerBlazorServer/App.razor
@@ -1,14 +1,46 @@
-﻿<CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(App).Assembly">
-        <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-        </Found>
-        <NotFound>
-            <PageTitle>Not found</PageTitle>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Sorry, there's nothing at this address.</p>
-            </LayoutView>
-        </NotFound>
-    </Router>
+﻿
+<CascadingAuthenticationState>
+    <ThemeProvider Theme="@Theme">
+        <Router AppAssembly="@typeof(App).Assembly">
+            <Found Context="routeData">
+                <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+                <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+            </Found>
+            <NotFound>
+                <PageTitle>Not found</PageTitle>
+                <LayoutView Layout="@typeof(MainLayout)">
+                    <p role="alert">Sorry, there's nothing at this address.</p>
+                </LayoutView>
+            </NotFound>
+        </Router>
+    </ThemeProvider>
 </CascadingAuthenticationState>
+
+
+@code {
+    Theme Theme { get; set; } = new Theme
+    {
+        CardOptions = new ThemeCardOptions
+        {
+
+        },
+        BodyOptions = new ThemeBodyOptions
+        {
+
+        },
+        SidebarOptions = new ThemeSidebarOptions
+        {
+
+        },
+        TableOptions = new ThemeTableOptions
+        {
+
+        },
+        ColorOptions = new ThemeColorOptions
+        {
+            
+        },
+        
+
+    };
+}
