--- a/DietTrackerBlazorServer/Pages/HealthMetrics.razor
+++ b/DietTrackerBlazorServer/Pages/HealthMetrics.razor
@@ -1,12 +1,11 @@
 ﻿@page "/HealthMetrics"
+@inherits DTPageBase
 
-@if (Loaded)
+
+
+@if (_CurrentHealthMetrics.Count > 0)
 {
-
-
-    @if (_CurrentHealthMetrics.Count > 0)
-    {
-        <DataGrid TItem="HealthMetric"
+    <DataGrid TItem="HealthMetric"
           Data="@_CurrentHealthMetrics"
           @bind-SelectedRow="_DataGridSelectedHealthMetric"
           Responsive
@@ -15,144 +14,140 @@
           Bordered>
 
 
-            <DataGridCommandColumn TItem="HealthMetric" />
-            <DataGridColumn Field="@nameof(HealthMetric.Name)" TItem="HealthMetric" Caption="Name" />
-            <DataGridColumn Field="@nameof(HealthMetric.Description)" TItem="HealthMetric" Caption="Description" />
-            <DataGridColumn Field="@nameof(HealthMetric.Color)" TItem="HealthMetric" Caption="Colour">
-                <DisplayTemplate>
-                    <ColorPicker Color="@context.Color" Disabled></ColorPicker>
-                </DisplayTemplate>
-            </DataGridColumn>
-            
-        </DataGrid>
-    }
-    else
-    {
-        <Paragraph>
-            You have not defined any health metrics.
-            Click the <Text Color="TextColor.Primary">add</Text> button to create a new health metric.
-        </Paragraph>
-    }
-    <Button Color="Color.Success" Clicked="@OnAddButtonClicked">
-        <Icon Name="IconName.Add"></Icon>
-        Add
-    </Button>
-    <Button Color="Color.Warning" Disabled="@(_DataGridSelectedHealthMetric == null)" Clicked="@OnEditButtonClicked">
-        <Icon Name="IconName.Wrench"></Icon>
-        Edit
-    </Button>
-    <Button Color="Color.Danger" Disabled="@(_DataGridSelectedHealthMetric == null)" Clicked="@OnDeleteButtonClicked">
-        <Icon Name="IconName.Delete"></Icon>
-        Delete
-    </Button>
+        <DataGridCommandColumn TItem="HealthMetric" />
+        <DataGridColumn Field="@nameof(HealthMetric.Name)" TItem="HealthMetric" Caption="Name" />
+        <DataGridColumn Field="@nameof(HealthMetric.Description)" TItem="HealthMetric" Caption="Description" />
+        <DataGridColumn Field="@nameof(HealthMetric.Color)" TItem="HealthMetric" Caption="Colour">
+            <DisplayTemplate>
+                <ColorPicker Color="@context.Color" Disabled></ColorPicker>
+            </DisplayTemplate>
+        </DataGridColumn>
+
+    </DataGrid>
+}
+else
+{
+    <Paragraph>
+        You have not defined any health metrics.
+        Click the <Text Color="TextColor.Primary">add</Text> button to create a new health metric.
+    </Paragraph>
+}
+<Button Color="Color.Success" Clicked="@OnAddButtonClicked">
+    <Icon Name="IconName.Add"></Icon>
+    Add
+</Button>
+<Button Color="Color.Warning" Disabled="@(_DataGridSelectedHealthMetric == null)" Clicked="@OnEditButtonClicked">
+    <Icon Name="IconName.Wrench"></Icon>
+    Edit
+</Button>
+<Button Color="Color.Danger" Disabled="@(_DataGridSelectedHealthMetric == null)" Clicked="@OnDeleteButtonClicked">
+    <Icon Name="IconName.Delete"></Icon>
+    Delete
+</Button>
 
 
-    <Modal @ref="_AddModal">
-        <EditForm Model="@_SubjectHealthMetric" OnValidSubmit="@OnValidSubmit_AddHealthMetric">
-            <ModalContent Centered>
-
-                <ModalHeader>Add health metric</ModalHeader>
-
-                <ModalBody>
-                    <Field>
-                        <FieldLabel>Name</FieldLabel>
-                        <TextEdit @bind-Text="_SubjectHealthMetric.Name" Placeholder="Enter a name..."></TextEdit>
-                    </Field>
-                    <Field>
-                        <FieldLabel>Description</FieldLabel>
-                        <TextEdit @bind-Text="_SubjectHealthMetric.Description" Placeholder="Enter a description..."></TextEdit>
-                    </Field>
-                    <Field>
-                        <FieldLabel>Color</FieldLabel>
-                        <ColorPicker @bind-Color="_SubjectHealthMetric.Color"></ColorPicker>
-                    </Field>
-                    <DataAnnotationsValidator />
-                    <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
-                </ModalBody>
-
-                <ModalFooter>
-                    <Button Type="ButtonType.Submit" Color="Color.Success">
-                        Add
-                    </Button>
-                    <Button Clicked="() => {_AddModal.Close(CloseReason.UserClosing);}" Color="Color.Warning">
-                        Cancel
-                    </Button>
-                </ModalFooter>
-
-            </ModalContent>
-        </EditForm>
-    </Modal>
-
-    <Modal @ref="_EditModal">
-        <EditForm Model="@_SubjectHealthMetric" OnValidSubmit="@OnValidSubmit_EditHealthMetric">
-            <ModalContent Centered>
-
-                <ModalHeader>Edit health metric</ModalHeader>
-
-                <ModalBody>
-                    <Field>
-                        <FieldLabel>Name</FieldLabel>
-                        <TextEdit @bind-Text="_SubjectHealthMetric.Name" Placeholder="Enter a name..."></TextEdit>
-                    </Field>
-                    <Field>
-                        <FieldLabel>Description</FieldLabel>
-                        <TextEdit @bind-Text="_SubjectHealthMetric.Description" Placeholder="Enter a description..."></TextEdit>
-                    </Field>
-                    <Field>
-                        <ColorPicker @bind-Color="_SubjectHealthMetric.Color"></ColorPicker>
-                    </Field>
-                    <DataAnnotationsValidator />
-                    <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
-                </ModalBody>
-
-                <ModalFooter>
-                    <Button Type="ButtonType.Submit" Color="Color.Warning">
-                        Modify
-                    </Button>
-                    <Button Clicked="() => {_EditModal.Close(CloseReason.UserClosing);}" Color="Color.Warning">
-                        Cancel
-                    </Button>
-                </ModalFooter>
-
-            </ModalContent>
-        </EditForm>
-    </Modal>
-
-    <Modal @ref="_DeleteModal">
+<Modal @ref="_AddModal">
+    <EditForm Model="@_SubjectHealthMetric" OnValidSubmit="@OnValidSubmit_AddHealthMetric">
         <ModalContent Centered>
 
-            <ModalHeader>Delete health metric</ModalHeader>
+            <ModalHeader>Add health metric</ModalHeader>
 
             <ModalBody>
-                <Alert Color="Color.Danger" Visible>
-                    <AlertMessage>
-                        @($"Delete \"{_SubjectHealthMetric.Name}\"?")
-                    </AlertMessage>
-
-                    <AlertDescription>
-                        This will remove <Strong>all</Strong> data associated with this health metric.
-                        Are you sure you want to delete @($"\"{_SubjectHealthMetric.Name}\"?")
-                    </AlertDescription>
-                </Alert>
+                <Field>
+                    <FieldLabel>Name</FieldLabel>
+                    <TextEdit @bind-Text="_SubjectHealthMetric.Name" Placeholder="Enter a name..."></TextEdit>
+                </Field>
+                <Field>
+                    <FieldLabel>Description</FieldLabel>
+                    <TextEdit @bind-Text="_SubjectHealthMetric.Description" Placeholder="Enter a description..."></TextEdit>
+                </Field>
+                <Field>
+                    <FieldLabel>Color</FieldLabel>
+                    <ColorPicker @bind-Color="_SubjectHealthMetric.Color"></ColorPicker>
+                </Field>
+                <DataAnnotationsValidator />
+                <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
             </ModalBody>
 
             <ModalFooter>
-                <Button Type="ButtonType.Submit" Color="Color.Danger" Clicked="@OnDeleteHealthMetricConfirmed">
-                    Delete
+                <Button Type="ButtonType.Submit" Color="Color.Success">
+                    Add
                 </Button>
-                <Button Clicked="() => {_DeleteModal.Close(CloseReason.UserClosing);}" Color="Color.Warning">
+                <Button Clicked="() => {_AddModal.Close(CloseReason.UserClosing);}" Color="Color.Warning">
                     Cancel
                 </Button>
             </ModalFooter>
 
         </ModalContent>
-    </Modal>
+    </EditForm>
+</Modal>
+
+<Modal @ref="_EditModal">
+    <EditForm Model="@_SubjectHealthMetric" OnValidSubmit="@OnValidSubmit_EditHealthMetric">
+        <ModalContent Centered>
+
+            <ModalHeader>Edit health metric</ModalHeader>
+
+            <ModalBody>
+                <Field>
+                    <FieldLabel>Name</FieldLabel>
+                    <TextEdit @bind-Text="_SubjectHealthMetric.Name" Placeholder="Enter a name..."></TextEdit>
+                </Field>
+                <Field>
+                    <FieldLabel>Description</FieldLabel>
+                    <TextEdit @bind-Text="_SubjectHealthMetric.Description" Placeholder="Enter a description..."></TextEdit>
+                </Field>
+                <Field>
+                    <ColorPicker @bind-Color="_SubjectHealthMetric.Color"></ColorPicker>
+                </Field>
+                <DataAnnotationsValidator />
+                <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
+            </ModalBody>
+
+            <ModalFooter>
+                <Button Type="ButtonType.Submit" Color="Color.Warning">
+                    Modify
+                </Button>
+                <Button Clicked="() => {_EditModal.Close(CloseReason.UserClosing);}" Color="Color.Warning">
+                    Cancel
+                </Button>
+            </ModalFooter>
+
+        </ModalContent>
+    </EditForm>
+</Modal>
+
+<Modal @ref="_DeleteModal">
+    <ModalContent Centered>
+
+        <ModalHeader>Delete health metric</ModalHeader>
+
+        <ModalBody>
+            <Alert Color="Color.Danger" Visible>
+                <AlertMessage>
+                    @($"Delete \"{_SubjectHealthMetric.Name}\"?")
+                </AlertMessage>
+
+                <AlertDescription>
+                    This will remove <Strong>all</Strong> data associated with this health metric.
+                    Are you sure you want to delete @($"\"{_SubjectHealthMetric.Name}\"?")
+                </AlertDescription>
+            </Alert>
+        </ModalBody>
+
+        <ModalFooter>
+            <Button Type="ButtonType.Submit" Color="Color.Danger" Clicked="@OnDeleteHealthMetricConfirmed">
+                Delete
+            </Button>
+            <Button Clicked="() => {_DeleteModal.Close(CloseReason.UserClosing);}" Color="Color.Warning">
+                Cancel
+            </Button>
+        </ModalFooter>
+
+    </ModalContent>
+</Modal>
 
 
 
-}
-else
-{
-    <Heading Size="HeadingSize.Is2">Loading...</Heading>
-}
+
 
