--- a/DietTrackerBlazorServer/Pages/_Layout.cshtml
+++ b/DietTrackerBlazorServer/Pages/_Layout.cshtml
@@ -29,7 +29,20 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.0/dist/chartjs-adapter-moment.min.js"></script>
 
     <script src="_framework/blazor.server.js"></script>
+
+    <script>
+        window.getElementWidth = (elementId) => {
+            var domRect = document.getElementById(elementId).getBoundingClientRect();
+            return domRect.width;
+        }
+        window.getElementHeight = (elementId) => {
+            var domRect = document.getElementById(elementId).getBoundingClientRect();
+            return domRect.height;
+        }
+    </script>
 </body>
 </html>
