--- a/DietTrackerBlazorServer/Pages/Stats.razor
+++ b/DietTrackerBlazorServer/Pages/Stats.razor
@@ -24,7 +24,7 @@
     </Addon>
 </Addons>
 
-<LineChart @ref="_LineChart" TItem="@ChartPoint" Options="@_LineChartOptions"></LineChart>
+<LineChart @ref="_LineChart" TItem="ChartPoint" Options="@_LineChartOptions"></LineChart>
 
 <Heading Size="HeadingSize.Is3">Correlations</Heading>
 
