--- a/DietTrackerBlazorServer/Pages/Index.razor
+++ b/DietTrackerBlazorServer/Pages/Index.razor
@@ -6,7 +6,4 @@
 <Heading Size="HeadingSize.Is2">Welcome to Diet Tracker!</Heading>
 <Paragraph>You can use this app to keep track of what you have eaten and how your health changes over time.</Paragraph>
 @*<Paragraph><a href="/HealthMetrics">Define a health metric</a> to get started.</Paragraph>*@
-
-@code {
-
-}
+<Button Clicked="@Clicked">Seed data</Button>
