--- a/DietTrackerBlazorServer/Shared/MainLayout.razor
+++ b/DietTrackerBlazorServer/Shared/MainLayout.razor
@@ -5,121 +5,119 @@
 
 <CascadingValue Value="@_SnackbarStack">
     <CascadingValue Value="@SetAppLoading">
+        <Layout>
+            <LayoutHeader Style="border-bottom-width:1px;border-bottom-color:black;">
+                <Bar Breakpoint="Breakpoint.Desktop"
+                    @ref="_SideBar">
 
-        <Layout Sider
-            @bind-Loading="@_Loading">
+                    <BarToggler />
 
-            <LayoutSider>
+                    <BarBrand>
+                        <BarItem>
+                            Diet Tracker
+                        </BarItem>
+                    </BarBrand>
 
-                <LayoutSiderContent>
-                    <Bar Mode="BarMode.VerticalInline"
-                         CollapseMode="BarCollapseMode.Hide"
-                         Breakpoint="Breakpoint.Desktop"
-                         NavigationBreakpoint="Breakpoint.Tablet"
-                         @ref="_SideBar">
+                    <BarMenu>
+                        <BarStart>
+                            <BarItem>
+                                <BarLink To="HealthMetrics" Style="flex-wrap:nowrap;">
+                                    <BarIcon IconName="IconName.Edit"></BarIcon>
+                                    Health metrics
+                                </BarLink>
+                            </BarItem>
+                            <BarItem>
+                                <BarLink To="AddHealthDataPoint">
+                                    <BarIcon IconName="IconName.Add"></BarIcon>
+                                    Add a health data point
+                                </BarLink>
+                            </BarItem>
+                            <BarItem>
+                                <BarLink To="AddDietDataPoint">
+                                    <BarIcon IconName="IconName.Add"></BarIcon>
+                                    Add a diet data point
+                                </BarLink>
+                            </BarItem>
 
-                        <BarMenu>
-                            <BarStart>
-                                <BarItem>
-                                    <BarLink To="HealthMetrics">
-                                        <BarIcon IconName="IconName.Edit"></BarIcon>
-                                        Health metrics
-                                    </BarLink>
-                                </BarItem>
-                                <BarItem>
-                                    <BarLink To="AddHealthDataPoint">
-                                        <BarIcon IconName="IconName.Add"></BarIcon>
-                                        Add a health data point
-                                    </BarLink>
-                                </BarItem>
-                                <BarItem>
-                                    <BarLink To="AddDietDataPoint">
-                                        <BarIcon IconName="IconName.Add"></BarIcon>
-                                        Add a diet data point
-                                    </BarLink>
-                                </BarItem>
+                            <BarItem>
+                                <BarLink To="HealthDataPoints">
+                                    <BarIcon IconName="IconName.FolderOpen"></BarIcon>
+                                    Data points
+                                </BarLink>
+                            </BarItem>
+                            <BarItem>
+                                <BarLink To="Stats">
+                                    <BarIcon IconName="IconName.ChartPie"></BarIcon>
+                                    Stats
+                                </BarLink>
+                            </BarItem>
+                            <BarItem>
+                                <BarLink To="ChartTest">
+                                    <BarIcon IconName="IconName.Code"></BarIcon>
+                                    Test
+                                </BarLink>
+                            </BarItem>
+                            <BarItem>
+                                <BarLink Clicked="@(async () => {SetAppLoading(true); await Task.Delay(2500); _Loading = false;})">
+                                    <BarIcon IconName="IconName.Code"></BarIcon>
+                                    Loading test
+                                </BarLink>
+                            </BarItem>
+                        </BarStart>
+                    </BarMenu>
+                </Bar>
+                @* <Bar Breakpoint="Breakpoint.Desktop"
+                Background="Background.Light"
+                ThemeContrast="ThemeContrast.Light"
+                Border="Border.OnBottom.Secondary"
+                Padding="Padding.Is1">
 
-                                <BarItem>
-                                    <BarLink To="HealthDataPoints">
-                                        <BarIcon IconName="IconName.FolderOpen"></BarIcon>
-                                        Data points
-                                    </BarLink>
-                                </BarItem>
-                                <BarItem>
-                                    <BarLink To="Stats">
-                                        <BarIcon IconName="IconName.ChartPie"></BarIcon>
-                                        Stats
-                                    </BarLink>
-                                </BarItem>
-                                <BarItem>
-                                    <BarLink To="ChartTest">
-                                        <BarIcon IconName="IconName.Code"></BarIcon>
-                                        Test
-                                    </BarLink>
-                                </BarItem>
-                                <BarItem>
-                                    <BarLink Clicked="@(async () => {SetAppLoading(true); await Task.Delay(2500); _Loading = false;})">
-                                        <BarIcon IconName="IconName.Code"></BarIcon>
-                                        Loading test
-                                    </BarLink>
-                                </BarItem>
-                            </BarStart>
-                        </BarMenu>
-                    </Bar>
-                </LayoutSiderContent>
-            </LayoutSider>
-            <Layout>
+                <BarBrand Flex="Flex.AlignItems.Center">
+                <Blazorise.Bootstrap.BarToggler Bar="@_SideBar"></Blazorise.Bootstrap.BarToggler>
+                <Text Margin="Margin.Is3.FromStart" TextSize="TextSize.Heading3" Display="Display.Inline">Diet Tracker</Text>
+                </BarBrand>
 
+                <BarMenu>
+                <BarEnd>
+                <AuthorizeView>
+                <Authorized>
+                <BarItem>
+                <Text>Logged in as @_UserName. <a href="/Identity/Account/Logout">Logout</a></Text>
+                </BarItem>
+                </Authorized>
+                <NotAuthorized>
+                <BarItem>
+                <Link To="Identity/Account/Login">Login</Link>
+                </BarItem>
+                <BarItem>
+                <Link To="Identity/Account/Register">Register</Link>
+                </BarItem>
+                </NotAuthorized>
+                </AuthorizeView>
+                </BarEnd>
+                </BarMenu>
+                </Bar> *@
+            </LayoutHeader>
 
-                <LayoutHeader>
-                    <Bar Breakpoint="Breakpoint.Desktop"
-                         Background="Background.Light"
-                         ThemeContrast="ThemeContrast.Light"
-                         Border="Border.OnBottom.Secondary"
-                         Padding="Padding.Is1">
+            <LayoutContent Margin="Margin.Is1.OnMobile.Is3.OnTablet">
+                <AuthorizeView>
+                    <Authorized>
+                        @Body
+                    </Authorized>
+                    <NotAuthorized>
+                        <Heading Size="HeadingSize.Is2">
+                            Please <a href="/Identity/Account/Login">login</a> to access site features.
+                        </Heading>
+                    </NotAuthorized>
+                </AuthorizeView>
+            </LayoutContent>
 
-                        <BarBrand Flex="Flex.AlignItems.Center">
-                            <Blazorise.Bootstrap.BarToggler Bar="@_SideBar"></Blazorise.Bootstrap.BarToggler>
-                            <Text Margin="Margin.Is3.FromStart" TextSize="TextSize.Heading3" Display="Display.Inline">Diet Tracker</Text>
-                        </BarBrand>
+            <LayoutFooter>
 
-                        <BarMenu>
-                            <BarEnd>
-                                <AuthorizeView>
-                                    <Authorized>
-                                        <BarItem>
-                                            <Text>Logged in as @_UserName. <a href="/Identity/Account/Logout">Logout</a></Text>
-                                        </BarItem>
-                                    </Authorized>
-                                    <NotAuthorized>
-                                        <BarItem>
-                                            <Link To="Identity/Account/Login">Login</Link>
-                                        </BarItem>
-                                        <BarItem>
-                                            <Link To="Identity/Account/Register">Register</Link>
-                                        </BarItem>
-                                    </NotAuthorized>
-                                </AuthorizeView>
-                            </BarEnd>
-                        </BarMenu>
-                    </Bar>
-                </LayoutHeader>
-
-                <LayoutContent Margin="Margin.Is1.OnMobile.Is3.OnTablet" >
-                    <AuthorizeView>
-                        <Authorized>
-                            @Body
-                        </Authorized>
-                        <NotAuthorized>
-                            <Heading Size="HeadingSize.Is2">
-                                Please <a href="/Identity/Account/Login">login</a> to access site features.
-                            </Heading>
-                        </NotAuthorized>
-                    </AuthorizeView>
-                </LayoutContent>
-            </Layout>
-            <SnackbarStack @ref="_SnackbarStack" />
-
+            </LayoutFooter>
         </Layout>
+        <SnackbarStack @ref="_SnackbarStack" />
+
+
     </CascadingValue>
 </CascadingValue>
