Redesign of stats page. WIP new DTMetricChart component

--- a/DietTrackerBlazorServer/Pages/AddDietDataPoint.razor
+++ b/DietTrackerBlazorServer/Pages/AddDietDataPoint.razor
@@ -1,5 +1,5 @@
 ﻿@page "/AddDietDataPoint"
-@inherits DTPageBase
+@inherits DTComponentBase
 
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
