--- a/DietTrackerBlazorServer/Pages/ChartTest.razor
+++ b/DietTrackerBlazorServer/Pages/ChartTest.razor
@@ -1,6 +1,6 @@
 ﻿@page "/charttest"
 @using DietTrackerBlazorServer.Components
-@inherits DTPageBase
+@inherits DTComponentBase
 
 @*<h3>ChartTest</h3>*@
 @*<LineChart TItem="ChartPoint" @ref="Chart" Options="@ChartOptions"></LineChart>*@
