--- a/DietTrackerBlazorServer/Pages/HealthDataPoints.razor
+++ b/DietTrackerBlazorServer/Pages/HealthDataPoints.razor
@@ -1,5 +1,5 @@
 ﻿@page "/HealthDataPoints"
-@inherits DTPageBase
+@inherits DTComponentBase
 @using DietTrackerBlazorServer.Data
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
