--- a/DietTrackerBlazorServer/Pages/Stats.razor
+++ b/DietTrackerBlazorServer/Pages/Stats.razor
@@ -1,5 +1,5 @@
-﻿@page "/Stats"
-@inherits DTPageBase
+﻿@page "/StatsOld"
+@inherits DTComponentBase
 
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
