--- a/DietTrackerBlazorServer/Pages/AddHealthDataPoint.razor
+++ b/DietTrackerBlazorServer/Pages/AddHealthDataPoint.razor
@@ -1,5 +1,5 @@
 ﻿@page "/AddHealthDataPoint"
-@inherits DTPageBase
+@inherits DTComponentBase
 @using DietTrackerBlazorServer.Areas.Identity
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
