Switched from Blazorise to MudBlazor control library. Commented out most pages as they will need to be modified

--- a/DietTrackerBlazorServer/Components/DTMetricChart.razor
+++ b/DietTrackerBlazorServer/Components/DTMetricChart.razor
@@ -1,5 +1,5 @@
 ﻿
-<LineChart @ref="Chart" TItem="object" Options="ChartOptions" Data="ChartData">
+@* <LineChart @ref="Chart" TItem="object" Options="ChartOptions" Data="ChartData">
 
-</LineChart>
+</LineChart> *@
 
