--- a/DietTrackerBlazorServer/Pages/AddDietDataPoint.razor
+++ b/DietTrackerBlazorServer/Pages/AddDietDataPoint.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
 
-<h3>AddDietDataPoint</h3>
+@* <h3>AddDietDataPoint</h3>
 <Field>
     <Addons>
         <Addon AddonType="AddonType.Start">
@@ -56,6 +56,6 @@
     </Field>
 
 <Paragraph>SelectedFoodType:@_SelectedFoodType?.Name</Paragraph>
-<Paragraph>AutoCompleteText:@_AutoCompleteText</Paragraph>
+<Paragraph>AutoCompleteText:@_AutoCompleteText</Paragraph> *@
 
 
