--- a/DietTrackerBlazorServer/Pages/HealthDataPoints.razor
+++ b/DietTrackerBlazorServer/Pages/HealthDataPoints.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
 
-<Heading Size="HeadingSize.Is3">Health data points</Heading>
+@* <Heading Size="HeadingSize.Is3">Health data points</Heading>
 
 @if (_CurrentHealthDataPoints.Count > 0)
 {
@@ -29,7 +29,7 @@ else
     <Paragraph>
         You have not added any data points yet.
     </Paragraph>
-}
+} *@
 
 
 
