--- a/DietTrackerBlazorServer/Pages/HealthMetrics.razor
+++ b/DietTrackerBlazorServer/Pages/HealthMetrics.razor
@@ -3,7 +3,7 @@
 
 
 
-@if (_CurrentHealthMetrics.Count > 0)
+@* @if (_CurrentHealthMetrics.Count > 0)
 {
     <DataGrid TItem="HealthMetric"
           Data="@_CurrentHealthMetrics"
@@ -145,7 +145,7 @@ else
         </ModalFooter>
 
     </ModalContent>
-</Modal>
+</Modal> *@
 
 
 
