--- a/DietTrackerBlazorServer/Pages/MetricStats.razor
+++ b/DietTrackerBlazorServer/Pages/MetricStats.razor
@@ -2,7 +2,7 @@
 @using DietTrackerBlazorServer.Components
 @inherits DTComponentBase
 
-<Addons>
+@* <Addons>
     <Addon AddonType="AddonType.Start">
         <AddonLabel>
             Health Metric
@@ -27,4 +27,4 @@
 <Divider></Divider>
 
 
-<DTMetricChart ViewSpan="DTMetricChart.ViewSpanType.Day"/>
+<DTMetricChart ViewSpan="DTMetricChart.ViewSpanType.Day"/> *@
