--- a/DietTrackerBlazorServer/Pages/Stats.razor
+++ b/DietTrackerBlazorServer/Pages/Stats.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
 
-<Tabs SelectedTab="@_selectedTab" SelectedTabChanged="@OnSelectedTabChanged">
+@* <Tabs SelectedTab="@_selectedTab" SelectedTabChanged="@OnSelectedTabChanged">
     <Items>
         <Tab Name="tab1">
             Tab1
@@ -62,5 +62,5 @@
             }
         </CardBody>
     </Card>
-}
+} *@
 
