--- a/DietTrackerBlazorServer/_Imports.razor
+++ b/DietTrackerBlazorServer/_Imports.razor
@@ -11,8 +11,4 @@
 @using DietTrackerBlazorServer.Shared
 @using DietTrackerBlazorServer.Data
 @using DietTrackerBlazorServer.Model
-@using Blazorise
-@using Blazorise.DataGrid
-@using Blazorise.Snackbar
-@using Blazorise.Charts
-@using Blazorise.Components
+@using MudBlazor
